[package]
name = "rdpmib-dbus"
version = "0.1.3"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dbus = "0.9.10"
dbus-crossroads = "0.5.3"
reqwest = { version = "0.13.2", features = ["blocking", "form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
